# Netra

./: .gitignore  AGENTS.md  ARCHITECTURE.html  Cargo.toml  Ideas.md  ModulePLAN.md  PLAN.md  README.md
.github/workflows/: ci.yml
crates/chatur-agent/: Cargo.toml
crates/chatur-agent/src/: lib.rs  mock.rs  pool.rs  protocol.rs  session.rs  spec.rs  transport.rs
crates/chatur-agent/tests/: fake_pi.rs  real_pi.rs
crates/chatur-api/: Cargo.toml
crates/chatur-api/src/: chatur.rs  config.rs  lib.rs  modules.rs  notify.rs  planner_supervisor.rs  resolver.rs
crates/chatur-api/tests/: facade.rs
crates/chatur-chroma/: Cargo.toml
crates/chatur-chroma/src/: bootstrap.rs  chatur_chroma_cli.py  chroma_query_helper.py  error.rs  handle.rs  ignore_rules.rs  indexer.rs  lib.rs  mcp.rs  prompt.rs  python_helper.py  query.rs  server.rs  win.rs
crates/chatur-cli/: Cargo.toml
crates/chatur-cli/src/: main.rs
crates/chatur-core/: Cargo.toml
crates/chatur-core/src/: error.rs  ids.rs  lib.rs
crates/chatur-core/src/model/: agent.rs  batch.rs  finding.rs  job.rs  mod.rs  project.rs  template.rs
crates/chatur-core/src/traits/: aggregator.rs  bus.rs  mod.rs  queue.rs  repo.rs  session.rs  sink.rs  support.rs  transport.rs
crates/chatur-engine/: Cargo.toml
crates/chatur-engine/src/: aggregate.rs  batch.rs  bus.rs  lib.rs  planner.rs  queue.rs  retry.rs  runner.rs  scheduler.rs
crates/chatur-engine/tests/: batch.rs  runner.rs
crates/chatur-store/: Cargo.toml
crates/chatur-store/migrations/: 0001_init.sql  0002_chromadb.sql
crates/chatur-store/src/: db.rs  lib.rs  queue.rs  sink.rs
crates/chatur-store/src/repo/: batch.rs  job.rs  mod.rs  project.rs  template.rs
crates/chatur-store/tests/: store.rs
crates/netra-agent/: Cargo.toml
crates/netra-agent/src/: lib.rs  mock.rs  pool.rs  protocol.rs  session.rs  spec.rs  transport.rs
crates/netra-agent/tests/: fake_pi.rs  real_pi.rs
crates/netra-api/: Cargo.toml
crates/netra-api/src/: config.rs  lib.rs  modules.rs  netra.rs  notify.rs  planner_supervisor.rs  resolver.rs
crates/netra-api/tests/: facade.rs
crates/netra-chroma/: Cargo.toml
crates/netra-chroma/src/: bootstrap.rs  chroma_query_helper.py  client.rs  ignore_rules.rs  indexer.rs  lib.rs  mcp.rs  netra_chroma_cli.py  prompt.rs  python_helper.py  query.rs  server.rs
crates/netra-cli/: Cargo.toml
crates/netra-cli/src/: main.rs
crates/netra-core/: Cargo.toml
crates/netra-core/src/: error.rs  lib.rs
crates/netra-core/src/model/: agent.rs  aggregate.rs  batch.rs  job.rs  project.rs
crates/netra-core/src/traits/: aggregator.rs  bus.rs  mod.rs  queue.rs  repo.rs  session.rs  sink.rs  transport.rs
crates/netra-engine/: Cargo.toml
crates/netra-engine/src/: aggregate.rs  batch.rs  bus.rs  lib.rs  planner.rs  queue.rs  retry.rs  runner.rs  scheduler.rs
crates/netra-engine/tests/: batch.rs  runner.rs
crates/netra-store/: Cargo.toml
crates/netra-store/migrations/: 0001_init.sql  0002_chromadb.sql
crates/netra-store/src/: db.rs  lib.rs  queue.rs  sink.rs
crates/netra-store/src/repo/: batch.rs  job.rs  mod.rs  project.rs  template.rs
crates/netra-store/tests/: store.rs
demo-prompt-editor/: Prompts.html  prompts.css  prompts.jsx  promptsData.js
demo-review-ui/: Review.html  review.css  review.jsx  reviewData.js  tokens.css
docs/: AGENTS.md  TODO.md  _TEMPLATE.html  cli.md  index.html  prompts.html  tauri.md
docs/assets/: nav.js  style.css
docs/concepts/: architecture-diagram.html  architecture.html  data-flow.html  design-patterns.html  glossary.html  overview.html  pi-protocol.html
docs/guides/: chromadb.md  cli.html  getting-started.html  tauri.html
docs/reference/chatur-agent/: index.html  lib.html  mock.html  pool.html  protocol.html  session.html  spec.html  transport.html
docs/reference/chatur-api/: index.html
docs/reference/chatur-core/: error.html  ids.html  index.html  lib.html  model-agent.html  model-aggregate.html  model-batch.html  model-job.html  model-mod.html  model-project.html  model-template.html  traits-aggregator.html  traits-bus.html  traits-mod.html  traits-queue.html  traits-repo.html  traits-session.html  traits-sink.html  traits-support.html  traits-transport.html
docs/reference/chatur-engine/: aggregate.html  batch.html  bus.html  index.html  lib.html  queue.html  retry.html  runner.html  scheduler.html
docs/reference/chatur-store/: db.html  index.html  lib.html  migration-0001.html  repo-batch.html  repo-job.html  repo-mod.html  repo-project.html  repo-template.html  sink.html
docs/reference/netra-agent/: index.html  lib.html  mock.html  pool.html  protocol.html  session.html  spec.html  transport.html
docs/reference/netra-api/: index.html
docs/reference/netra-core/: error.html  ids.html  index.html  lib.html  model-agent.html  model-aggregate.html  model-batch.html  model-job.html  model-mod.html  model-project.html  model-template.html  traits-aggregator.html  traits-bus.html  traits-mod.html  traits-queue.html  traits-repo.html  traits-session.html  traits-sink.html  traits-support.html  traits-transport.html
docs/reference/netra-engine/: aggregate.html  batch.html  bus.html  index.html  lib.html  queue.html  retry.html  runner.html  scheduler.html
docs/reference/netra-store/: db.html  index.html  lib.html  migration-0001.html  repo-batch.html  repo-job.html  repo-mod.html  repo-project.html  repo-template.html  sink.html
example-ui/: Chatur.html  app.jsx  data.js  icons.jsx  styles.css
modules-ui/: Modules.html  modules-editor.jsx  modules-shell.jsx  modules-views.jsx  modules.css  modulesData.js
planner/: pyproject.toml
planner/chatur_planner/: __init__.py  server.py  settings.py
planner/netra_planner/: __init__.py  server.py  settings.py
src-tauri/: .gitignore  Cargo.toml  chatur.toml  netra.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
ui/src/: app.css  app.html
ui/src/lib/: Icon.svelte  api.js  batchIo.js  reviewFormat.js  (+3 more)
(+48 files in other folders)
