[project]
name = "netra-planner"
version = "0.1.0"
description = "Structured-output sidecar for NETRA. Wraps `outlines` behind a small FastAPI surface."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "outlines>=0.1",
  "openai>=1.30",
  "pydantic>=2.5",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netra_planner*"]
