[package]
name = "netra-tauri"
version = "0.1.0"
description = "NETRA desktop shell"
edition = "2021"
rust-version = "1.93"
license = "MIT"

# Standalone workspace: the Tauri build links system webkit libraries, so it is
# kept out of the main `cargo build --workspace` and CI. Build it explicitly
# from this directory (see docs/tauri.md).
[workspace]

[lib]
# The Tauri convention: app logic lives in a library so mobile targets and the
# desktop binary can share it.
name = "netra_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
netra-api = { path = "../crates/netra-api" }
netra-core = { path = "../crates/netra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
