[package]
name = "chatur-api"
description = "Public headless library facade for Mini ChatUR"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
chatur-core.workspace = true
chatur-agent.workspace = true
chatur-store.workspace = true
chatur-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
