[package]
name = "chatur-cli"
description = "Headless command-line interface for Mini ChatUR"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "chatur"
path = "src/main.rs"

[dependencies]
chatur-api.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
