[package]
name = "chatur-engine"
description = "Job scheduling, batch orchestration, and aggregation for Mini ChatUR"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
chatur-core.workspace = true
chatur-agent.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
chatur-store.workspace = true
tempfile.workspace = true
