[package]
name = "chatur-store"
description = "SQLite-backed persistence and log sinks for Mini ChatUR"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
chatur-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
