[package]
name = "netra-agent"
description = "pi coding-agent process management and RPC transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
netra-core.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
