[package]
name = "netra-chroma"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
netra-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ignore = "0.4"
which = "6"
dirs = "5"
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
