[package]
name = "netra-store"
description = "SQLite-backed persistence and log sinks for NETRA"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
netra-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
